# Paperread

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
batch_skill/: SKILL.md  pyproject.toml
batch_skill/agents/: openai.yaml
batch_skill/references/: batch-workflow.md  parallel-dispatch.md  worker-result-contract.md
batch_skill/scripts/: validate-skill.py
batch_skill/src/paperread_batch/: cli.py  local_prepare.py  manifest.py  report.py  runs.py  state.py  takeaway.py  worker_contract.py
batch_skill/tests/: test_cli.py  test_default_workflow_docs.py  test_manifest.py  test_report.py  test_state.py  test_takeaway.py  test_validate_skill.py
paper_reader_batch/: SKILL.md  pyproject.toml
paper_reader_batch/agents/: openai.yaml
paper_reader_batch/references/: batch-workflow.md  parallel-dispatch.md  worker-result-contract.md
paper_reader_batch/references/schemas/: paper_reader_batch.command-result.v2.schema.json  paper_reader_batch.event.v2.schema.json  paper_reader_batch.local-prepare-result.v2.schema.json  paper_reader_batch.manifest.v2.schema.json  paper_reader_batch.reconciliation.v2.schema.json  paper_reader_batch.report.v2.schema.json  paper_reader_batch.state.v2.schema.json  paper_reader_batch.worker-result.v2.schema.json  paper_reader_batch.write-result.v2.schema.json
paper_reader_batch/scripts/: export-v2-schemas.py  validate-skill.py
paper_reader_batch/src/paper_reader_batch/: cli.py  io.py  local_prepare.py  manifest.py  report.py  state.py  takeaway.py  v2_artifacts.py  v2_cli.py  v2_contracts.py  v2_errors.py  v2_journal.py  v2_json.py  v2_local_prepare.py  v2_manifest.py  v2_next_actions.py  v2_receipts.py  v2_reducer.py  v2_run.py  (+4 more)
paper_reader_batch/tests/: test_cli.py  test_default_workflow_docs.py  test_local_prepare.py  test_manifest.py  test_report.py  test_state.py  test_takeaway.py  test_v2_artifact_closure.py  test_v2_cli_surface.py  test_v2_contracts.py  test_v2_journal_integrity.py  test_v2_journal_recovery.py  test_v2_legacy_immutability.py  test_v2_local_prepare_coordinator.py  test_v2_local_prepare_leases.py  test_v2_manifest_runtime.py  test_v2_next_actions.py  test_v2_pre_recovery_identity.py  test_v2_reducer_status.py  test_v2_ref_bounded_reads.py  test_v2_release_bundle.py  test_v2_report_runtime.py  test_v2_run_runtime.py  test_v2_storage_safety.py  test_v2_worker_leases.py  test_v2_write_artifact_replay.py  test_v2_write_recovery.py  test_v2_write_reducer.py  test_v2_write_runtime.py  test_validate_skill.py
(+288 files in other folders)
