[project]
name = "zotero-paperread"
version = "0.1.0"
description = "Zotero-first paper summary workflow for Codex."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "pymupdf>=1.26.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.scripts]
zotero-paperread = "zotero_paperread.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
