[project]
name = "paperread"
version = "0.1.0"
description = "Paper reading workflow for Zotero titles and local PDF paths."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jinja2>=3.1.6",
    "markdown-it-py>=4.0.0",
    "pymupdf>=1.26.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.scripts]
paperread = "zotero_paperread.cli:app"
zotero-paperread = "zotero_paperread.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "zotero_paperread"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
